# fastapi_wallet_app

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
migrations/: env.py
migrations/versions/: 2026_02_27_0728-afe450784b49_initial_migration.py
tests/: test_main.py
